# MediaLearn

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/jadyn/ai/medialearn/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/jadyn/ai/medialearn/: AppApplication.kt  MainActivity.kt  MainApplication.kt
app/src/main/java/com/jadyn/ai/medialearn/camera/: Camera2Activity.kt  Camera2Ops.kt  CameraActivity.kt  CameraFunction.kt
app/src/main/java/com/jadyn/ai/medialearn/camera/audio/: AiLoiAudioEncoder.kt
app/src/main/java/com/jadyn/ai/medialearn/camera/codec/: AiLoiVideoEncoder.kt  CodecInputSurface.kt  TextureFunction.kt  function.kt
app/src/main/java/com/jadyn/ai/medialearn/camera2/: Camera2RecordActivity.kt
app/src/main/java/com/jadyn/ai/medialearn/codec/: AiLoiVideoEncoder.kt  CodecInputSurface.kt  TextureFunction.kt  function.kt
app/src/main/java/com/jadyn/ai/medialearn/cutout/: CutOutActivity.kt
app/src/main/java/com/jadyn/ai/medialearn/decode/: DecodeActivity.kt  DecodeFrameActivity.kt  DecoderFormat.kt  OutputSurface.kt  VideoAnalyze.kt  VideoDecoder.kt
app/src/main/java/com/jadyn/ai/medialearn/encode/: EncodeFrameActivity.kt
app/src/main/java/com/jadyn/ai/medialearn/gl/: STextureRender.kt
app/src/main/java/com/jadyn/ai/medialearn/gles/: GLActivity.kt  GLTestProgram.kt  GLTextureActivity.kt
app/src/main/java/com/jadyn/ai/medialearn/gles/render/: DrawElements2Render.kt  DrawElementsRender.kt  FirstRender.kt  MatrixRender.kt  SecondRender.kt  TextureRender.kt
app/src/main/java/com/jadyn/ai/medialearn/permissions/: Permission.java  RxPermissions.java  RxPermissionsFragment.java
app/src/main/java/com/jadyn/ai/medialearn/utils/: ActivityFunction.kt  CodeCFunction.kt  MediaFunction.kt  Utils.kt
app/src/main/java/com/jadyn/ai/medialearn/widget/: AutoFitTextureView.kt
app/src/main/java/com/jadyn/ai/ushow/: BaseXFragment.kt  UShowActivity.kt  UShowFragment.kt
app/src/main/java/com/jadyn/ai/ushow/presenter/: UShowViewModel.kt
app/src/main/res/drawable/: full_screen_selector.xml
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_camera.xml  activity_camera2.xml  activity_camera2_record.xml  activity_cutout.xml  activity_decode.xml  activity_decode_frame.xml  activity_encode_frame.xml  activity_gles.xml  activity_gles_texture.xml  activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/jadyn/ai/medialearn/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
mediakit/: CMakeLists.txt  build.gradle
mediakit/src/main/: AndroidManifest.xml
mediakit/src/main/cpp/: ALVideoPlayer.cpp  CMakeLists.txt  com_jadyn_mediakit_player_ALVideoController.h
mediakit/src/main/cpp/common/: CommonTools.h
mediakit/src/main/cpp/gles/: CMakeLists.txt  com_jadyn_mediakit_gl_GLJni.cpp  com_jadyn_mediakit_gl_GLJni.h
mediakit/src/main/cpp/video_player/: ALVideoPlayer.cpp  com_jadyn_mediakit_player_ALVideoPlayer.h
mediakit/src/main/java/com/jadyn/mediakit/audio/: AudioEncoder.kt  AudioOps.kt  AudioPacket.kt  AudioRecorder.kt
mediakit/src/main/java/com/jadyn/mediakit/cache/: DiskLruCache.java  DiskLrucacheExt.kt  IoUtils.java  StrictLineReader.java
mediakit/src/main/java/com/jadyn/mediakit/camera/: ICamera.kt
mediakit/src/main/java/com/jadyn/mediakit/camera/camera2/: Camera2Impl.kt
mediakit/src/main/java/com/jadyn/mediakit/camera2/: AutoFitTextureView.kt  Camera2Ext.kt  Camera2Recorder.kt  CameraIDC.kt  CameraMgr.kt  Muxer.kt  SurfaceCompose.kt  VideoGen.kt  VideoPacket.kt  VideoRecorder.kt
mediakit/src/main/java/com/jadyn/mediakit/function/: BitmapExt.kt  CameraFunction.kt  CodeCFunction.kt  CommonFunction.kt  MathFunction.kt  MediaFunction.kt  SchedulerArrayExecutor.kt  SurfaceFunction.kt  ThreadExt.kt
mediakit/src/main/java/com/jadyn/mediakit/gl/: CodecInputSurface.kt  EglEnv.kt  GLFunction.kt  GLJni.kt  OutputSurface.kt  STextureRender.kt  Texture2dProgram.kt  TextureDraw.kt  TextureExt.kt
mediakit/src/main/java/com/jadyn/mediakit/mux/: HardWareMuxCore.kt  Muxer.kt
mediakit/src/main/java/com/jadyn/mediakit/player/: ALPlayerView.kt  ALVideoController.kt  ALVideoPlayer.kt
mediakit/src/main/java/com/jadyn/mediakit/video/decode/: DecodeCore.kt  DecoderFormat.kt  DiskCacheAssist.kt  FrameCache.kt  GLCore.kt  OutputSurface.kt  VideoAnalyze.kt  VideoDecoder.kt  VideoDecoder2.kt  VideoDecoder2Compat.kt  YuvCore.kt
mediakit/src/main/java/com/jadyn/mediakit/video/decode/pixg/: PixelsGen.kt
mediakit/src/main/java/com/jadyn/mediakit/video/encode/: EncodeProgram.kt  GLEncodeCore.kt  SurfaceEncodeCore.kt  VideoEncoder.kt  VideoRecorder.kt
mediakit/src/main/jni/: Android.mk  Application.mk  com_jadyn_mediakit_gl_GLJni.c
mediakit/src/main/res/values/: strings.xml
presenter/: build.gradle
presenter/src/androidTest/java/com/jadyn/ai/presenter/: ExampleInstrumentedTest.java
presenter/src/main/: AndroidManifest.xml
presenter/src/main/java/com/jadyn/ai/presenter/base/: IBaseViewContract.kt
presenter/src/main/java/com/jadyn/ai/presenter/ushow/: IUShowContract.kt  UShowPresenter.kt
presenter/src/main/res/values/: strings.xml
presenter/src/test/java/com/jadyn/ai/presenter/: ExampleUnitTest.java
